# vhacd-lib

./: CMakeLists.txt  LICENSE  LICENSE.md
inc/: btConvexHullComputer.h  btVector3.h  vhacdICHull.h  vhacdManifoldMesh.h  vhacdMesh.h  vhacdMutex.h  vhacdVHACD.h  vhacdVolume.h
src/: FloatMath.cpp  VHACD.cpp  btAlignedAllocator.cpp  btConvexHullComputer.cpp  vhacdICHull.cpp  vhacdManifoldMesh.cpp  vhacdMesh.cpp  vhacdRaycastMesh.cpp  vhacdVolume.cpp
